# indexing_improved

./: .gitignore  CMakeLists.txt  README.md  main.cpp  script.py
include/: boundary_analysis.hpp  count_token_usage.hpp  indexing_thread_worker.hpp  merging_thread_worker.hpp  mqueue.hpp  read_config.hpp  read_from_path.hpp  reading_thread.hpp
src/: boundary_analysis.cpp  count_token_usage.cpp  indexing_thread_worker.cpp  merging_thread_worker.cpp  read_config.cpp  read_from_path.cpp  reading_thread.cpp
testdir/: extra.txt  testing.txt
